Added splash screen and fixed the asking for permission bug

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">LocationAlarm</string>
+    <string name="googleApi">AIzaSyDGtAsCeh8OqRHoAh25gA2e21bivq9g68o</string>
 </resources>
